--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,7 @@ jobs:
           name: Install deps
           command: |
               cpanm -l deps --installdeps --with-develop -n .
+              dzil authordeps | cpanm -l deps
       - run:
           name: Coverage
           command: |
