--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
           name: Install deps
           command: |
             cpanm -l deps --installdeps --with-develop -n .
-            dzil authordeps | cpanm -l deps
+            dzil listdeps --author | cpanm -l deps
       - save_cache:
           key: cpanfile-{{ arch }}-{{ checksum "/opt/perl.config" }}-{{ checksum "cpanfile" }}
           paths:
@@ -57,7 +57,7 @@ jobs:
           name: Install deps
           command: |
               cpanm -l deps --installdeps --with-develop -n .
-              dzil authordeps | cpanm -l deps
+              dzil listdeps --author | cpanm -l deps
       - run:
           name: Coverage
           command: |
