--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Log-Any-Adapter-DERIV
-author  = bianry.com <BINARY@cpan.org>
+author  = binary.com <BINARY@cpan.org>
 license = Perl_5
 copyright_holder = Binary Services Ltd
 copyright_year   = 2022
